# axum_server

./: .env  Cargo.toml  README.md
src/: main.rs
static/: index.html
static/button/: index.html
static/js/: button.js  login.js
static/login/: index.html
static/meme/: index.html
