[package]
name = "axumserver"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
dotenvy = "0.15.7"
rand = "0.10.1"
serde = "1.0.228"
serde_json = "1.0.150"
sqlx = {version = "0.9.0", features = ["runtime-tokio", "tls-rustls", "postgres", "macros"] }
tokio = { version = "1.52.3", features = ["full"] }
tower = "0.5.3"
tower-cookies = "0.11.0"
tower-http = { version = "0.7.0", features = ["fs"] }
